--- a/css/skin.css
+++ b/css/skin.css
@@ -1937,7 +1937,7 @@ button.btn-xs, button.btn-sm {
     font-size: xx-large;
     text-transform: uppercase;
     font-weight: 700;
-    margin: 2rem 16px 2px 0;
+    margin: 0;
 }
 
 .title h2 {
